toList direkte