@@ -2,7 +2,6 @@ package no.nav.foreldrepenger.mottak.error;
 
 import static com.fasterxml.jackson.annotation.JsonFormat.Feature.WRITE_SINGLE_ELEM_ARRAYS_UNWRAPPED;
 import static com.fasterxml.jackson.annotation.JsonFormat.Shape.STRING;
-import static java.util.stream.Collectors.toList;
 import static no.nav.foreldrepenger.mottak.util.MDCUtil.callId;
 import static org.springframework.core.NestedExceptionUtils.getMostSpecificCause;
 
@@ -58,7 +57,7 @@ class ApiError {
         return messages.stream()
                 .filter(Objects::nonNull)
                 .map(Object::toString)
-                .collect(toList());
+                .toList();
     }
 
     @Override
