@@ -1,7 +1,6 @@
 package no.nav.foreldrepenger.mottak.http.filters;
 
 import static java.util.Collections.singletonList;
-import static java.util.stream.Collectors.toList;
 
 import java.util.Arrays;
 import java.util.List;
@@ -16,7 +15,7 @@ final class FilterRegistrationUtil {
     static List<String> urlPatternsFor(String... patterns) {
         return Arrays.stream(patterns)
                 .map(pattern -> pattern + ALWAYS)
-                .collect(toList());
+                .toList();
     }
 
     static List<String> always() {
